<resources>
    <string name="app_name">ProyectoFinalM4B</string>

    <string name="nombre">Nombre</string>
    <string name="direcci_n">dirección</string>
    <string name="direcci_">Dirección</string>
    <string name="name">name</string>
    <string name="_0000000000">0000000000</string>
    <string name="ruc_c_dula_pasaporte">RUC/Cédula/Pasaporte</string>
    <string name="cancelar">CANCELAR</string>
    <string name="guardar">Guardar</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="tel_fono">Teléfono</string>
    <string name="_0000000">0000000</string>
    <string name="todo">TODO</string>
    <string name="pasword">************</string>
    <string name="contrase_a">Contraseña</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="correo">Correo</string>
    <string name="editar_perfi">EDITAR PERFIL</string>
    <string name="compras">Compras</string>
    <string name="home">home</string>
    <string name="tod">TODO</string>
    <string name="to">TO</string>
    <string name="precio">Precio</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="detalle_producto">Detalle Producto</string>
    <string name="detalle">Detalle</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="t">TODO</string>
    <string name="odo">TODO</string>
    <string name="Tipo">Tipo</string>
    <string name="Codigo">Codigo</string>
    <string name="Stock">Stock</string>
</resources>