<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalle_producto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Principal">

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F1EAEA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:contentDescription="@string/t"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.099"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0.9"
            android:background="#B5AFA3"
            android:backgroundTint="#B5AFA3"
            android:orientation="horizontal"
            android:outlineAmbientShadowColor="#B6B0A4"
            android:outlineSpotShadowColor="#B6B0A4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:contentDescription="@string/todo"
                android:outlineAmbientShadowColor="#B6B0A4"
                android:outlineSpotShadowColor="#B6B0A4"
                app:srcCompat="@drawable/whatsapp_image_2023_02_10_at_09_57_52_removebg_preview" />

            <Space
                android:layout_width="283dp"
                android:layout_height="26dp"
                android:layout_weight="@dimen/material_emphasis_high_type"
                android:outlineAmbientShadowColor="#B6B0A4"
                android:outlineSpotShadowColor="#B6B0A4" />

            <ImageButton
                android:id="@+id/imageButtonBuscar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:backgroundTint="#B5AFA3"
                android:contentDescription="@string/tod"
                app:srcCompat="?android:attr/actionModeWebSearchDrawable"
                app:tint="#070707"
                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B5AFA3"
            android:backgroundTint="#B5AFA3"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0">

            <ImageButton
                android:id="@+id/imageButtonInicio4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#B4AEA2"
                android:contentDescription="@string/home"
                app:srcCompat="@drawable/iconfinder_contat_us_33home_4211870_115065"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButtonCompra4"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#B4AEA2"
                android:contentDescription="@string/compras"
                app:srcCompat="@drawable/shoppingcart_80945"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButtonPerfil4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#B5AFA3"
                android:contentDescription="@string/to"
                app:srcCompat="@drawable/ceo_icon_icons_com_76995"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="362dp"
            android:layout_height="386dp"
            android:layout_marginTop="176dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProdCod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Codigo"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    tools:text="Codigo" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/txtNombreProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_producto"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/txtTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Tipo"
                    android:text="Tipo"
                    android:textSize="16sp"
                    tools:text="Tipo" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/txtDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detalle"
                    android:textColor="@color/black"
                    android:textColorHint="#757575"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/txtStock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Stock"
                    android:text="Stock"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/txtPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:textColor="@android:color/holo_green_dark"
                    android:textColorHint="#757575"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <Button
                    android:id="@+id/btnAgregarCarro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#EFA632"
                    android:text="@string/agregar_al_carrito"
                    android:textColor="#302207" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>